Fix card flip animation flickering

--- a/src/app/card/card.component.scss
+++ b/src/app/card/card.component.scss
@@ -8,7 +8,6 @@
   width: 100%;
   height: 100%;
   position: relative;
-  transition: transform 1s;
   transform-style: preserve-3d;
 }
 
